# TKReconstruct

./: .gitignore  CMakeLists.txt  MockCalibratePipeline.conf  PTD_tracking.conf  README.md  TKReconstructPipeline.conf.in  install_test.sh  output.txt  output_2.txt  output_tracking.txt  test.conf
include/: TKEvent.h  TKOMhit.h  TKReconstruct.h  TKtrhit.h
lib/: TKEventdict_rdict.pcm  TKOMhitdict_rdict.pcm  TKclusterdict_rdict.pcm  TKtrackdict_rdict.pcm  TKtrhitdict_rdict.pcm
src/: TKEvent.cpp  TKOMhit.cpp  TKReconstruct.cpp
src/dicts/: TKEventdict.cpp  TKOMhitdict.cpp  TKclusterdict.cpp  TKtrackdict.cpp  TKtrhitdict.cpp
